// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > rendrer slik den skal med className 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f className"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;

exports[`Card > rendrer slik den skal med hasLargePadding og hasMargin 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;

exports[`Card > rendrer slik den skal uten className 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f"
  >
    <p>
      lorem ipsum
    </p>
  </section>
</DocumentFragment>
`;
